src/objects/CallAttendee__c.object
<CustomObject>
    <description>CORE - This object provides the ability to link multiple attendees internal &amp; external to a call record.</description>
    <fields>
        <fullName>Call__c</fullName>
        <description>CORE - The call to which the attendee is linked</description>
        <inlineHelpText>The call to which the attendee is linked</inlineHelpText>
        <label>Call</label>
        <referenceTo>Call__c</referenceTo>
        <relationshipLabel>Call Attendees</relationshipLabel>
        <relationshipName>Call_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE - Client contact attending call</description>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Attendances</relationshipLabel>
        <relationshipName>Call_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pearson_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE - Other Pearson Employee attending call</description>
        <label>Pearson Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call Attendee</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Call Attendee No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MayNotAddOwnerOfCallToAttendee</fullName>
        <active>true</active>
        <errorConditionFormula>Call__r.OwnerId__c ==  Pearson_Employee__c</errorConditionFormula>
        <errorDisplayField>Pearson_Employee__c</errorDisplayField>
        <errorMessage>The Call Owner is not required to be added as an attendee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OneAttendeeSelectionMandatory</fullName>
        <active>true</active>
        <description>At least one kind of attendee must be selected in order to save a record</description>
        <errorConditionFormula>AND(ISBLANK(Pearson_Employee__c), ISBLANK(Client__c))</errorConditionFormula>
        <errorMessage>At lease one attendee must be selected in order to save this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OneTypeOfAttendeeSelectionMandatory</fullName>
        <active>true</active>
        <description>Only one kind of attendee can be selected in order to save a record</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Pearson_Employee__c)), NOT(ISBLANK(Client__c)))</errorConditionFormula>
        <errorMessage>Only one kind of attendee can be selected in order to save a record</errorMessage>
    </validationRules>
</CustomObject>